--- a/use-in-algoma.html
+++ b/use-in-algoma.html
@@ -34,6 +34,7 @@
     <img src="images/banner-page3.jpg" alt="Graffitti of hearts painted on a wall on Gore Street">
   </header>
   <main>
+    <button onclick="topFunction()" class=".myBtn" id="myBtn" title="Go to top">Top</button>
     <ol class="page-nav-1">
       <li><a class="btn btn-1" href="#use-in-algoma">Substance use in Algoma</a></li>
       <li><a class="btn btn-2" href="#pregnancy-use">Substance Use During Pregnancy</a></li>
@@ -159,5 +160,26 @@
       <small>Web Design by Holly Drew</small>
     </div>
   </footer>
+  <script>
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+  </script>
 </body>
 </html>
